Update swagger api docs
